--- a/rezept.css
+++ b/rezept.css
@@ -1,31 +1,51 @@
 body {
     padding: 20px;
     display: flex;
+    font-size: 1.2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+@media only screen and (max-width: 1120px) {
+  body {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 0.8rem;
+  }
 }
 
 #imageColumn {
     display: flex;
-    background-blend-mode: multiply;
 
     img {
-        padding: 20px;
+        padding: 1.302vw;
         padding-left: 0px;
-        width: 300px;
-        height: 364px;
-        max-height: 364px;
+        width: 19.531vw;
+        height: 23.698vw;
+        max-height: 23.698vw;
     };
 
 }
 
-#content {
-    background-blend-mode: multiply;
-}
-
 td {
-    padding-right: 20px;
+    padding-right: 1.302vw;
 }
 th {
     text-align: start;
+}
+
+td:nth-child(2) {
+    margin-right: 1.953vw;
+    border-right: solid #4d4d4d;
+}
+
+th:nth-child(1) {
+    padding-right: 1.953vw;
+    border-right: solid #4d4d4d;
 }
 
 ul {
@@ -33,8 +53,8 @@ ul {
 }
 
 p {
-    max-width: 40vw;
-    scroll-margin-top: 100px;
+    max-width: 50vw;
+    scroll-margin-top: 13.316vw;
 }
 
 
@@ -45,7 +65,7 @@ amount {
 #anchors {
     display: block;
     max-width: 38vw;
-    overflow-wrap: normal;
+    text-wrap: stable;
 }
 
 a {
@@ -63,6 +83,6 @@ a {
 }
 
 .flash {
-    animation: flashBackground 0.8s;
+    animation: flashBackground 1.2s;
 }
 
