--- a/projekt/styles.css
+++ b/projekt/styles.css
@@ -1,7 +1,7 @@
 body {
     font-size: 1.2rem;
     margin: 0;
-    /* display: flex; */
+    font-family: 'Times New Roman', Times, serif;
 }
 
 main {
